--- a/PRA/multifaceted.html
+++ b/PRA/multifaceted.html
@@ -1,161 +1,336 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Adit Sanika | Multifaceted</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700%7CYellowtail&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/multifaceted_styles.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700%7CYellowtail&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/multifaceted_styles.css" />
+    <link rel="stylesheet" href="css/mediaquerys.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <div class="container">
-                <div id="nav-logo">
-                    <a href="index.html">
-                        <img src="./materials/images/logo.svg" alt="Logo Principal">
-                    </a>
-                </div>
-                <div id="nav-links">
-                    <ul>
-                        <li>
-                            <a class="glow-on-hover" href="./index.html">HOME</a>
-                        </li>
-                        <li>
-                            <a class="active-button glow-on-hover" href="./multifaceted.html">MULTIFACETED</a>
-                        </li>
-                        <li><a class="glow-on-hover" href="#">PRICING</a></li>
-                        <li><a class="glow-on-hover" href="#">BLOG</a></li>
-                        <li><a class="glow-on-hover" href="#">CONTACT</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav>
+        <div class="container">
+          <div id="nav-logo">
+            <a href="index.html">
+              <img src="./materials/images/logo.svg" alt="Logo Principal" />
+            </a>
+          </div>
+          <div id="nav-links">
+            <ul>
+              <li>
+                <a class="glow-on-hover" href="./index.html">HOME</a>
+              </li>
+              <li>
+                <a
+                  class="active-button glow-on-hover"
+                  href="./multifaceted.html"
+                  >MULTIFACETED</a
+                >
+              </li>
+              <li><a class="glow-on-hover" href="#">PRICING</a></li>
+              <li><a class="glow-on-hover" href="#">BLOG</a></li>
+              <li><a class="glow-on-hover" href="#">CONTACT</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <section id="presentation">
-            <div class="principal">
-                <h1>Adit Sanika Namrata</h1>
-                <p>My work as a designer.</p>
-            </div>
-        </section>
+      <section id="presentation">
+        <div class="principal">
+          <h1>Adit Sanika Namrata</h1>
+          <p>My work as a designer.</p>
+        </div>
+      </section>
+
+      <section id="multifaceted">
+        <div class="container">
+          <h2 class="section-header">
+            Multifaceted aspects of design, light, and color
+          </h2>
+          <div class="section-text">
+            <p>
+              Design, light, and color are integral components of the visual and
+              functional aspects of art, architecture, and everyday life. The
+              thoughtful integration of these elements is crucial for creating
+              compelling, harmonious, and user-friendly designs.
+            </p>
+            <p>
+              This table explores the multifaceted aspects of design, light, and
+              color. Each theme encompasses various principles, elements, and
+              applications that influence our visual experiences. Understanding
+              the psychology of color, the significance of lighting, and the
+              principles of design can enhance the way we interact with our
+              surroundings and the products we use.
+            </p>
+
+            <p>
+              Discover how these elements intersect and impact the world of
+              design by exploring the following table:
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="multifaceted-table">
+        <div class="container">
+          <h3>Design, Light, and Color</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="table-head"></th>
+                <th class="table-head">Design</th>
+                <th class="table-head">Light</th>
+                <th class="table-head">Color</th>
+              </tr>
+            </thead>
+            <tbody class="table-body">
+              <tr class="table-row">
+                <td class="table-title">Principles</td>
+                <td>
+                  Good design is essential for user experience. It should be
+                  intuitive and visually appealing.
+                </td>
+                <td>
+                  Natural light can provide a sense of connection to the
+                  outdoors and improve well-being.
+                </td>
+                <td>
+                  Colors can convey emotions and have psychological effects on
+                  viewers.
+                </td>
+              </tr>
+              <tr class="table-row">
+                <td class="table-title">Elements</td>
+                <td>
+                  Design principles guide the creation of functional and
+                  aesthetically pleasing products.
+                </td>
+                <td>
+                  Lighting plays a crucial role in design. It can create
+                  ambiance and highlight key elements.
+                </td>
+                <td>
+                  Color selection can evoke emotions and set the tone for a
+                  design project.
+                </td>
+              </tr>
+              <tr class="table-row">
+                <td class="table-title">Theory</td>
+                <td>
+                  Design thinking involves empathy, defining the problem,
+                  ideation, prototyping, and testing.
+                </td>
+                <td>
+                  Proper lighting design can reduce eye strain and improve
+                  productivity in workspaces.
+                </td>
+                <td>
+                  Color contrast is used for emphasis, guiding the viewer's
+                  attention.
+                </td>
+              </tr>
+              <tr class="table-row">
+                <td class="table-title">Applications</td>
+                <td>
+                  User-centered design ensures that products meet the needs and
+                  preferences of users.
+                </td>
+                <td>
+                  Light and shadow can add depth and dimension to a design,
+                  creating a 3D effect.
+                </td>
+                <td>
+                  Color harmonies like complementary and analogous colors create
+                  visual interest.
+                </td>
+              </tr>
+              <tr class="table-row">
+                <td class="table-title">Psychology</td>
+                <td>
+                  Designers often collaborate with clients to refine the design
+                  concept and vision.
+                </td>
+                <td>
+                  Architectural lighting can transform the appearance of
+                  buildings and landscapes.
+                </td>
+                <td>
+                  Choosing the right color for a call-to-action button can
+                  impact conversion rates on a website.
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <div class="container">
-            <h2>My social networks</h2>
-            <h2>Email newsletter</h2>
-            <h2>Images of the day</h2>
-            <div class="social-container">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit porttitor
-                    turpis, nullam congue convallis montes purus class tristique mollis
-                    velit, posuere libero netus sodales dictum habitasse cubilia odio.
-                </p>
-                <p>
-                    Lectus fermentum mattis eu blandit iaculis ullamcorper tristique
-                    senectus consequat montes a ridiculus elementum natoque habitasse,
-                    volutpat sem cum porta auctor vitae nisl magnis dignissim aenean
-                    nascetur nibh mauris...[ &rarr; ]
-                </p>
+      <div class="container">
+        <div class="social-container">
+          <h2>My social networks</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit porttitor
+            turpis, nullam congue convallis montes purus class tristique mollis
+            velit, posuere libero netus sodales dictum habitasse cubilia odio.
+          </p>
+          <p>
+            Lectus fermentum mattis eu blandit iaculis ullamcorper tristique
+            senectus consequat montes a ridiculus elementum natoque habitasse,
+            volutpat sem cum porta auctor vitae nisl magnis dignissim aenean
+            nascetur nibh mauris...[ &rarr; ]
+          </p>
 
-                <div class="social-icons">
-                    <a href="https://www.dribbble.com" target="_blank" aria-label="Dribbble">
-                        <i class="fa-brands fa-dribbble"></i>
-                    </a>
-                    <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
-                        <i class="fa-brands fa-square-facebook"></i>
-                    </a>
-                    <a href="https://plus.google.com" target="_blank" aria-label="Google Plus">
-                        <i class="fa-brands fa-google-plus-g"></i>
-                    </a>
-                    <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                    <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://vk.com" target="_blank" aria-label="VK">
-                        <i class="fa-brands fa-vk"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="email-newsletter">
-                <p>Sign up for our email newsletter to find out all the news.</p>
-                <form>
-                    <input type="text" name="name" placeholder="Name">
-                    <input type="email" name="email" placeholder="Email">
-                    <button type="submit">SUBMIT</button>
-                </form>
-            </div>
+          <div class="social-icons">
+            <a
+              href="https://www.dribbble.com"
+              target="_blank"
+              aria-label="Dribbble"
+            >
+              <i class="fa-brands fa-dribbble"></i>
+            </a>
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              aria-label="Facebook"
+            >
+              <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <a
+              href="https://plus.google.com"
+              target="_blank"
+              aria-label="Google Plus"
+            >
+              <i class="fa-brands fa-google-plus-g"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com"
+              target="_blank"
+              aria-label="LinkedIn"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://vk.com" target="_blank" aria-label="VK">
+              <i class="fa-brands fa-vk"></i>
+            </a>
+          </div>
+        </div>
+        <div class="email-newsletter">
+          <h2>Email newsletter</h2>
+          <p>Sign up for our email newsletter to find out all the news.</p>
+          <form>
+            <input type="text" name="name" placeholder="Name" />
+            <input type="email" name="email" placeholder="Email" />
+            <button type="submit">SUBMIT</button>
+          </form>
+        </div>
 
-            <div class="gallery">
-                <div class="grid-container">
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_1.jpg" alt="Ocean View">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_2.jpg" alt="Lavender Fields">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_3.jpg" alt="Drawing Hands">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_4.jpg" alt="Forest at Sunrise">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_5.jpg" alt="Terrarium">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_6.jpg" alt="Network Visualization">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_7.jpg" alt="Hillside Under Cloudy Sky">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_8.jpg" alt="Building Facade">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_9.jpg" alt="Sunset Sky">
-                    </div>
-                </div>
+        <div class="gallery">
+          <h2>Images of the day</h2>
+          <div class="grid-container">
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_1.jpg"
+                alt="Ocean View"
+              />
             </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_2.jpg"
+                alt="Lavender Fields"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_3.jpg"
+                alt="Drawing Hands"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_4.jpg"
+                alt="Forest at Sunrise"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_5.jpg"
+                alt="Terrarium"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_6.jpg"
+                alt="Network Visualization"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_7.jpg"
+                alt="Hillside Under Cloudy Sky"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_8.jpg"
+                alt="Building Facade"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_9.jpg"
+                alt="Sunset Sky"
+              />
+            </div>
+          </div>
         </div>
-        <div class="container footer-contact">
-            <div class="contact-item">
-                <i class="fa-solid fa-phone-flip"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Give Us A call:</p>
-                    <p class="contact">+00 (123) 765 8765</p>
-                </div>
-            </div>
-            <div class="contact-item">
-                <i class="fa-solid fa-envelope"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Send Us A Mail:</p>
-                    <p class="contact">myName@domain.com</p>
-                </div>
-            </div>
-            <div class="contact-item">
-                <i class="fa-solid fa-clock"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Monday - Saturday:</p>
-                    <p class="contact">14.00am - 18.00pm</p>
-                </div>
-            </div>
-            <div class="contact-item">
-                <i class="fa-solid fa-location-dot"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Come Visit Us:</p>
-                    <p class="contact">Directions to my location</p>
-                </div>
-            </div>
+      </div>
+      <div class="container footer-contact">
+        <div class="contact-item">
+          <i class="fa-solid fa-phone-flip"></i>
+          <div class="contact-data">
+            <p class="contact-header">Give Us A call:</p>
+            <p class="contact">+00 (123) 765 8765</p>
+          </div>
         </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-envelope"></i>
+          <div class="contact-data">
+            <p class="contact-header">Send Us A Mail:</p>
+            <p class="contact">myName@domain.com</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-clock"></i>
+          <div class="contact-data">
+            <p class="contact-header">Monday - Saturday:</p>
+            <p class="contact">14.00am - 18.00pm</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-location-dot"></i>
+          <div class="contact-data">
+            <p class="contact-header">Come Visit Us:</p>
+            <p class="contact">Directions to my location</p>
+          </div>
+        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
