--- a/PRA/web-design.html
+++ b/PRA/web-design.html
@@ -282,8 +282,8 @@
       <aside>
         <h2>More on my blog</h2>
         <div class="aside-list">
-          <h3>More resources</h3>
-          <ul>
+          <h3>The Whole Series</h3>
+          <ul class="custom-bullets">
             <li><a href="#">Web Design: Shaping the Digital Experience</a></li>
             <li><a href="#">Web Design: All about</a></li>
             <li><a href="#">Web Design: I'm the best</a></li>
@@ -291,14 +291,14 @@
         </div>
         <div class="aside-list">
           <h3>More resources</h3>
-          <ul>
+          <ul class="custom-bullets">
             <li><a href="#">A Simple Web Developer’s Guide To Color</a></li>
             <li><a href="#">The Code Side Of Color</a></li>
             <li><a href="#">Color Meanings</a></li>
             <li><a href="#">Color Meanings & Symbolism</a></li>
           </ul>
         </div>
-        <div>
+        <div class="aside-buttons">
           <h3>Explore more on</h3>
           <div class="explore-button-container">
             <a href="#" class="explore-button">Programming</a>
